# nordencult

./: .editorconfig  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: deploy-pages.yml
scripts/: generate-map-overlay.mjs
src/: App.css  App.tsx  index.css
src/data/: character.ts  characterData.json  city.ts  faction.ts
src/map/components/: Bg.css  Bg.tsx  Map.css  Map.tsx  MapOvarlayPlaceRoute.tsx  MapOverlay.css  MapOverlay.tsx  MapWindow.css  MapWindow.tsx
src/map/components/window/: CityInfoPanel.css  CityInfoPanel.tsx  HistoryPanel.tsx  KnightsPanel.css  KnightsPanel.tsx  StatsPanel.tsx
src/ui/components/: CharacterImage.css  CharacterImage.tsx  InfoWindow.css  InfoWindow.tsx  InfoWindowWithTabs.css  InfoWindowWithTabs.tsx  MapWindow.tsx
tools/character-editor/: app.py  pyproject.toml
tools/character-editor/data/: characters.json
tools/character-editor/lib/: config.py  image_utils.py  models.py  store.py
tools/character-editor/pages/: character_editor.py  character_list.py  export.py
tools/editor/: package-lock.json  package.json
tools/editor/app/: globals.css  layout.tsx  page.tsx
tools/editor/app/api/characters/: route.ts
tools/editor/app/api/characters/[id]/: route.ts
tools/editor/app/api/export/: route.ts
tools/editor/app/api/sprites/: route.ts
tools/editor/app/edit/[id]/: page.tsx
tools/editor/app/export/: page.tsx
tools/editor/data/: characters.json
tools/editor/lib/: config.ts  constants.ts  store.ts  types.ts
(+1 files in other folders)
